Fix bugs in sidebar and improve code readability

--- a/style.css
+++ b/style.css
@@ -11,7 +11,11 @@
 }
 
 :root {
-  --colapsed-sidebar-width: 5rem;
+  --logo-size: 2.5rem;
+  --icons-size: 1.5rem;
+  --icons-padding: calc((var(--logo-size) - var(--icons-size)) / 2);
+  --icons-margin: 0.7rem;
+  --collapsed-sidebar-width: calc(var(--icons-size) + 2 * (var(--icons-margin) + var(--icons-padding)));
   --sidebar-width: 20rem;
   --sidebar-time: 0.3s;
 }
@@ -22,30 +26,29 @@ body {
 }
 
 #content {
-  padding-left: var(--colapsed-sidebar-width);
+  padding-left: var(--sidebar-width);
   display: grid;
   grid-template: auto repeat(2, 1fr) auto / 3fr 1fr;
   transition: padding var(--sidebar-time) ease;
 }
 
-#content.transitioned {
-  padding-left: var(--sidebar-width);
+#content.collapsed {
+  padding-left: var(--collapsed-sidebar-width);
 }
 
 #sidebar {
-  --logo-size: 3rem;
-  --icons-size: 2rem;
   height: 100vh;
   background-color: snow;
   position: fixed;
   top: 0;
   z-index: 2;
   width: var(--sidebar-width);
+  border-right: 1px solid black;
   transition: width var(--sidebar-time) ease;
 }
 
-#sidebar.colapsed {
-  width: var(--colapsed-sidebar-width);
+#sidebar.collapsed {
+  width: var(--collapsed-sidebar-width);
 }
 
 .sidebar-inner-scroll {
@@ -61,22 +64,56 @@ body {
   list-style: none;
 }
 
-.items-list a {
+.link-button, .toggle-sidebar-button {
   display: flex;
-  height: var(--icons-size);
   align-items: center;
   gap: 1rem;
-  text-decoration: none;
-  color: black;
-  margin: 0 1rem;
-  padding: 0 calc((var(--logo-size) - var(--icons-size)) / 2);
+  margin: 0 var(--icons-margin);
+  padding: 0 var(--icons-padding);
 }
 
-.items-list li:first-child a {
-  height: var(--logo-size);
+.link-button {
+  text-decoration: none;
+  color: black;
+}
+
+.toggle-sidebar-button {
+  cursor: pointer;
+  height: 3rem;
+  background-color: snow;
+  z-index: 1;
+  position: absolute;
+  bottom: 0;
+  width: calc(var(--sidebar-width) - 2 * var(--icons-margin));
+  transition: all var(--sidebar-time) ease;
+  overflow: hidden;
+}
+
+.toggle-sidebar-button.collapsed {
+  width: calc(var(--collapsed-sidebar-width) - 2 * var(--icons-margin));
+}
+
+.toggle-icon {
+  transition: transform var(--sidebar-time) ease;
+}
+
+.toggle-icon.rotated {
+  transform: rotate(-180deg);
+}
+
+.hidden .item-name {
+  display: none;
+}
+
+#logo .link-button {
   margin-top: 1rem;
   margin-bottom: 0.75rem;
   padding: 0;
+}
+
+#logo .item-name {
+  font-size: 1.2rem;
+  font-weight: bold;
 }
 
 .item-icon {
@@ -84,39 +121,11 @@ body {
 }
 
 .item-name {
-  font-size: 1.5rem;
-  display: none;
+  font-size: 1rem;
   white-space: nowrap;
 }
 
-.show-item-name {
-  display: inline;
-}
-
-.toggle-sidebar-button {
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  margin: 0 1rem;
-  padding: 0 calc((var(--logo-size) - var(--icons-size)) / 2);
-  height: 3rem;
-  font-size: var(--icons-size);
-  background-color: snow;
-  z-index: 1;
-  position: absolute;
-  bottom: 0;
-}
-
-.toggle-sidebar-button i {
-  transition: transform var(--sidebar-time) ease;
-}
-
-.rotate i {
-  transform: rotate(-180deg);
-}
-
-.logo {
+.logo-image {
   flex-shrink: 0;
   display: grid;
   width: var(--logo-size);
@@ -125,23 +134,23 @@ body {
   grid-template: 1fr 1fr 1fr / 1fr 1fr;
 }
 
-.logo > * {
+.logo-image > * {
   background-color: black;
 }
 
-.logo .square1 {
+.logo-image .square1 {
   grid-area: 1 / 1 / span 2 / span 1;
 }
 
-.logo .square2 {
+.logo-image .square2 {
   grid-area: span 1 / 1 / -1 / span 1;
 }
 
-.logo .square3 {
+.logo-image .square3 {
   grid-area: 1 / span 1 / span 1 / -1;
 }
 
-.logo .square4 {
+.logo-image .square4 {
   grid-area: span 2 / span 1 / -1 / -1;
 }
 
